Add default colors

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --neutral-grey: #ebf4f5;
   --primary: #b5c6e0;
-  --secondary: ##0050b6;
+  --secondary: #0050b6;
   --font: #121416;
   --accent: #c1a875;
 }
