Set background color

--- a/style.css
+++ b/style.css
@@ -15,3 +15,8 @@ html {
   font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+body {
+  height: 100vh;
+  background: linear-gradient(145deg, var(--neutral-grey), var(--primary));
+}
