--- a/style.css
+++ b/style.css
@@ -4,10 +4,16 @@
   --secondary: #0050b6;
   --font: #121416;
   --accent: #c1a875;
+  --shadow: rgba(18, 20, 23, 0.2);
 }
 
 * {
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: #121416;
 }
 
 body,
@@ -19,4 +25,33 @@ html {
 body {
   height: 100vh;
   background: linear-gradient(145deg, var(--neutral-grey), var(--primary));
+}
+
+.flex {
+  display: flex;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.padding {
+  padding: 1rem;
+}
+
+.navbar {
+  background-color: var(--neutral-grey);
+  height: 80px;
+  box-shadow: 0 1px 5px 1px var(--shadow);
+}
+
+#logo {
+  font-family: "Times New Roman", Times, serif;
+  letter-spacing: -2px;
+  font-weight: 500;
+  font-size: 2.5rem;
 }
