--- a/style.css
+++ b/style.css
@@ -11,15 +11,15 @@
   box-sizing: border-box;
 }
 
-a {
-  text-decoration: none;
-  color: #121416;
-}
-
 body,
 html {
   font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+a {
+  text-decoration: none;
+  color: #121416;
 }
 
 body {
@@ -27,26 +27,46 @@ body {
   background: linear-gradient(145deg, var(--neutral-grey), var(--primary));
 }
 
-.flex {
-  display: flex;
-}
-
-.align-center {
-  align-items: center;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.padding {
-  padding: 1rem;
-}
-
 .navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem;
   background-color: var(--neutral-grey);
   height: 80px;
   box-shadow: 0 1px 5px 1px var(--shadow);
+}
+
+.icon {
+  width: 32px;
+  height: auto;
+  fill: var(--secondary);
+}
+
+.button-text {
+  background-color: var(--secondary);
+  color: white;
+  font-size: 1rem;
+  font-family: inherit;
+  font-weight: 500;
+  padding: 1rem;
+  border-radius: 50px;
+  cursor: pointer;
+  margin: 0;
+}
+
+.button:hover {
+  background-color: #1165d3;
+}
+
+.button-icon svg:hover {
+  fill: #1165d3;
+  cursor: pointer;
+}
+
+.button:active,
+.button-icon:active {
+  translate: 1px 1px;
 }
 
 #logo {
@@ -54,4 +74,5 @@ body {
   letter-spacing: -2px;
   font-weight: 500;
   font-size: 2.5rem;
+  color: var(--font);
 }
