--- a/style.css
+++ b/style.css
@@ -76,3 +76,32 @@ body {
   cursor: pointer;
   margin: 0;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 1000px;
+  padding: 2rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  background-color: #ebf4f5;
+  padding: 1rem;
+  height: 150px;
+  width: 300px;
+  max-width: 300px;
+  box-shadow: 1px 1px 1px 1px var(--shadow);
+  border-radius: 12px;
+}
+
+.card div {
+  line-height: 1.2;
+}
+
+.title {
+  font-weight: 700;
+}
