--- a/style.css
+++ b/style.css
@@ -79,11 +79,15 @@ body {
 
 .container {
   display: flex;
-  justify-content: center;
   align-items: center;
-  margin: 0 auto;
-  max-width: 1000px;
   padding: 2rem;
+  margin: 3rem auto;
+  gap: 20px;
+  max-width: 1000px;
+  padding-top: 2rem;
+  box-shadow: 1px 1px 2px 2px var(--shadow);
+  border-radius: 12px;
+  background-color: rgb(218, 224, 235);
 }
 
 .card {
@@ -98,10 +102,30 @@ body {
   border-radius: 12px;
 }
 
+.card:hover {
+  box-shadow: 2px 2px 2px 2px var(--shadow);
+}
+
 .card div {
   line-height: 1.2;
 }
 
 .title {
   font-weight: 700;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.3);
+}
+
+.modal-content {
+  background-color: var(--neutral-grey);
+  margin: 30% auto;
+  width: 50%;
 }
