--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ body {
   gap: 20px;
   max-width: 1000px;
   padding-top: 2rem;
-  box-shadow: 1px 1px 2px 2px var(--shadow);
+  /* box-shadow: 1px 1px 2px 2px var(--shadow); */
+  border: 1px solid rgb(195, 208, 226);
   border-radius: 12px;
   background-color: rgb(218, 224, 235);
 }
@@ -115,6 +116,7 @@ body {
 }
 
 .modal {
+  display: block;
   position: fixed;
   top: 0;
   left: 0;
@@ -125,7 +127,52 @@ body {
 }
 
 .modal-content {
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
   background-color: var(--neutral-grey);
   margin: 30% auto;
-  width: 50%;
+  padding: 3rem;
+  width: fit-content;
+  height: fit-content;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  font-family: inherit;
+  font-size: 1.25rem;
+  border-radius: 2rem;
+  padding: 0.5rem 1rem;
+  border: 3px solid #b5c6e0;
+  text-align: center;
+}
+
+input:focus {
+  border: 3px solid #1165d3;
+}
+
+::placeholder {
+  color: #cad4e0;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+}
+
+.checkbox-label {
+  margin-top: 2rem;
+  font-family: system-ui, sans-serif;
+  font-size: 1.25rem;
+  font-weight: bold;
+  line-height: 1.1;
+  display: grid;
+  grid-template-columns: 1em auto;
+  gap: 0.5em;
 }
