--- a/style.css
+++ b/style.css
@@ -127,8 +127,10 @@ body {
 }
 
 .modal-content {
+  position: relative;
   border-radius: 12px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   background-color: var(--neutral-grey);
   margin: 4rem auto;
@@ -223,4 +225,50 @@ input:focus {
   padding: 0.5rem 1rem;
   background-color: white;
   width: 100%;
+}
+
+.submit-btn {
+  background-color: var(--secondary);
+  color: white;
+  border: none;
+  margin: 1.5rem 0 0 0;
+  font-weight: 600;
+  font-family: inherit;
+  font-size: 1rem;
+  width: 100%;
+}
+
+.submit-btn:active {
+  border: none;
+}
+
+.submit-btn:focus {
+  border: none;
+}
+
+.submit-btn:hover {
+  background-color: #1165d3;
+  cursor: pointer;
+}
+
+.modal-title {
+  text-align: center;
+  background-color: #dae2ee;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 900;
+  color: var(--secondary);
+  margin-bottom: 1.5rem;
+  padding: 0.5rem 0;
+  border-radius: 6px;
+}
+
+#modal-close {
+  color: #b5c6e0;
+  cursor: pointer;
+  top: 18px;
+  right: 10px;
+  font-size: 2rem;
+  line-height: 0;
+  position: absolute;
 }
